--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -18,7 +18,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import random "
    ]
   },
   {
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,6 +363,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25    22561\n",
+       "5     72618\n",
+       "87    46370\n",
+       "41    79089\n",
+       "56    65415\n",
+       "96    35246\n",
+       "0     36468\n",
+       "59    60511\n",
+       "Name: 0, dtype: int32"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salary[0].sample(8)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -408,6 +437,63 @@
    ],
    "source": [
     "print(averageOfgroups(group_with_replacement,15))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Built in function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84    44293\n",
+       "88    24387\n",
+       "46    61085\n",
+       "15    49031\n",
+       "60    51682\n",
+       "12    68397\n",
+       "95    26066\n",
+       "64    53742\n",
+       "64    53742\n",
+       "64    53742\n",
+       "75    38340\n",
+       "64    53742\n",
+       "28    76407\n",
+       "67    60101\n",
+       "77    45040\n",
+       "99    30192\n",
+       "1     42232\n",
+       "5     72618\n",
+       "46    61085\n",
+       "42    43394\n",
+       "47    40385\n",
+       "96    35246\n",
+       "15    49031\n",
+       "57    77024\n",
+       "40    26386\n",
+       "5     72618\n",
+       "6     31800\n",
+       "67    60101\n",
+       "89    59770\n",
+       "37    69074\n",
+       "Name: 0, dtype: int32"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salary[0].sample(30,replace=True)"
    ]
   },
   {
