--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -19,12 +19,15 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import random "
+    "import random \n",
+    "from scipy import stats\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "from sklearn.preprocessing import StandardScaler,MinMaxScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "GO0C6iFebwwh"
    },
@@ -497,11 +500,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "left tailed test\n",
+    "A factory produces wires with an average tensile strength of 500 N. A new supplier sends cheaper raw material. The engineer wants to check if the tensile strength has decreased.\n",
+    "\n",
+    "H₀: μ = 500\n",
+    "\n",
+    "Hₐ: μ < 500 (left-tailed test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "battery_df=pd.DataFrame(np.random.randint(0,10,30))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n=30\n",
+    "population_mean=30\n",
+    "std_population=3\n",
+    "alpha=0.05\n",
+    "sample_mean=battery_df[0].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_sample = (sample_mean - population_mean) / (std_population / (n**0.5))\n",
+    "z_critical = stats.norm.ppf(alpha)\n",
+    "if z_sample < z_critical:\n",
+    "    print(\"Reject null hypothesis\")\n",
+    "else:\n",
+    "    print(\"Fail to reject null hypothesis\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A beverage company claims their soda cans contain 330 ml on average. A quality analyst wants to check if the filling machine deviates (could be more or less).\n",
+    "\n",
+    "H₀: μ = 330\n",
+    "\n",
+    "Hₐ: μ ≠ 330 (two-tailed test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_sample = (sample_mean - population_mean) / (std_population / (n**0.5))\n",
+    "z_critical_right = stats.norm.ppf(1 - alpha/2)\n",
+    "z_critical_left = stats.norm.ppf(alpha/2)\n",
+    "if z_critical_left > z_sample > z_critical_right:\n",
+    "        print(\"Reject null hypothesis\")\n",
+    "else:\n",
+    "    print(\"Fail to reject null hypothesis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mean_squared_error' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m mse \u001b[38;5;241m=\u001b[39m \u001b[43mmean_squared_error\u001b[49m(y_true, y_pred)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mean_squared_error' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "mse = mean_squared_error(y_true, y_pred)\n",
+    "mae = mean_absolute_error(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_scores = stats.zscore(data)\n",
+    "\n",
+    "outliers = data[abs(z_scores) > 3]\n",
+    "\n",
+    "print(outliers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "df_standardized = scaler.fit_transform(df)\n",
+    "\n",
+    "print(df_standardized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MinMaxScaler"
+   ]
   }
  ],
  "metadata": {
