--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "GO0C6iFebwwh"
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,9 +535,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reject null hypothesis\n"
+     ]
+    }
+   ],
    "source": [
     "z_sample = (sample_mean - population_mean) / (std_population / (n**0.5))\n",
     "z_critical = stats.norm.ppf(alpha)\n",
@@ -560,9 +568,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "biscuit_df=pd.DataFrame(np.random.randint(0,10,30))\n",
+    "n=30\n",
+    "population_mean=30\n",
+    "std_population=3\n",
+    "alpha=0.05\n",
+    "sample_mean=biscuit_df[0].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accept null hypothesis\n"
+     ]
+    }
+   ],
    "source": [
     "z_sample = (sample_mean - population_mean) / (std_population / (n**0.5))\n",
     "z_critical_right = stats.norm.ppf(1 - alpha/2)\n",
@@ -570,54 +600,184 @@
     "if z_critical_left > z_sample > z_critical_right:\n",
     "        print(\"Reject null hypothesis\")\n",
     "else:\n",
-    "    print(\"Fail to reject null hypothesis\")"
+    "    print(\"Accept null hypothesis\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mean_squared_error' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m mse \u001b[38;5;241m=\u001b[39m \u001b[43mmean_squared_error\u001b[49m(y_true, y_pred)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'mean_squared_error' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "172.2 10.2\n"
      ]
     }
    ],
    "source": [
-    "mse = mean_squared_error(y_true, y_pred)\n",
-    "mae = mean_absolute_error(y_true, y_pred)"
+    "mse = mean_squared_error(actual[\"value\"], actual[\"predicted\"])\n",
+    "mae = mean_absolute_error(actual[\"value\"], actual[\"predicted\"])\n",
+    "print(mse,mae)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series([], Name: value, dtype: int32)\n"
+     ]
+    }
+   ],
    "source": [
-    "z_scores = stats.zscore(data)\n",
+    "z_scores = stats.zscore(actual[\"value\"])\n",
     "\n",
-    "outliers = data[abs(z_scores) > 3]\n",
+    "outliers = actual[\"value\"][abs(z_scores) > 3]\n",
     "\n",
     "print(outliers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "scaler = StandardScaler()\n",
-    "df_standardized = scaler.fit_transform(df)\n",
+    "actual[\"df_standardized\"] = scaler.fit_transform(actual[[\"value\"]])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "actual[\"df_normalized\"] = scaler.fit_transform(actual[[\"value\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reject null hypothesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "battery_life = pd.DataFrame(np.random.randint(0,10,30))\n",
     "\n",
-    "print(df_standardized)"
+    "# Given\n",
+    "n = len(battery_life)\n",
+    "sample_mean = battery_life[0].mean()\n",
+    "sample_std = battery_life[0].std()\n",
+    "population_mean = 7\n",
+    "alpha = 0.05\n",
+    "\n",
+    "# t statistic\n",
+    "t_data = (sample_mean - population_mean) / (sample_std / (n**0.5))\n",
+    "\n",
+    "# t critical (left-tailed)\n",
+    "t_critical_left = stats.t.ppf(alpha, df=n-1)\n",
+    "\n",
+    "# comparison\n",
+    "if t_data < t_critical_left:\n",
+    "    print(\"Reject null hypothesis\")\n",
+    "else:\n",
+    "    print(\"Accept null hypothesis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accept null hypothesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "dominos_delivery = pd.DataFrame(np.random.randint(15,45,30))\n",
+    "pizza_delivery=pd.DataFrame(np.random.randint(15,45,35))\n",
+    "#Given\n",
+    "sample_dominos=30\n",
+    "sample_pizza=35\n",
+    "sample_dominos_mean=dominos_delivery[0].mean()\n",
+    "sample_pizza_mean=pizza_delivery[0].mean()\n",
+    "sample_dominos_std=dominos_delivery[0].std()\n",
+    "sample_pizza_std=pizza_delivery[0].std()\n",
+    "\n",
+    "#s_data calculate\n",
+    "s_data=((sample_dominos-1)*(sample_dominos_std**2)+(sample_pizza-1)*(sample_pizza_std**2))/(sample_pizza+sample_dominos-2)\n",
+    "\n",
+    "#t_data\n",
+    "t_data=(sample_dominos_mean-sample_pizza_mean)/(s_data*((1/sample_dominos)+(1/sample_pizza))**0.5)\n",
+    "\n",
+    "#t_critical\n",
+    "t_critical_right=stats.t.ppf(1-alpha/2,df=sample_dominos+sample_pizza-2)\n",
+    "t_critical_left=stats.t.ppf(alpha/2,df=sample_dominos+sample_pizza-2)\n",
+    "\n",
+    "#comparision\n",
+    "if t_data>t_critical_right or t_data<t_critical_left:\n",
+    "    print(\"Reject null hypothesis\")\n",
+    "else:\n",
+    "    print(\"Accept null hypothesis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fail to reject H0 (no difference)\n"
+     ]
+    }
+   ],
+   "source": [
+    "expected = pd.Series(np.random.randint(5,10,30))\n",
+    "actual   = pd.Series(np.random.randint(5,10,30))\n",
+    "\n",
+    "# difference\n",
+    "diff = actual - expected\n",
+    "\n",
+    "n = len(diff)\n",
+    "diff_mean = diff.mean()\n",
+    "diff_std = diff.std()\n",
+    "\n",
+    "alpha = 0.05\n",
+    "\n",
+    "# t statistic\n",
+    "t_data = diff_mean / (diff_std / (n**0.5))\n",
+    "\n",
+    "# t critical two-tailed\n",
+    "t_critical_right = stats.t.ppf(1 - alpha/2, df=n-1)\n",
+    "t_critical_left  = stats.t.ppf(alpha/2, df=n-1)\n",
+    "\n",
+    "# decision\n",
+    "if t_data > t_critical_right or t_data < t_critical_left:\n",
+    "    print(\"Reject H0 (difference exists)\")\n",
+    "else:\n",
+    "    print(\"Fail to reject H0 (no difference)\")"
    ]
   },
   {
@@ -625,9 +785,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "MinMaxScaler"
-   ]
+   "source": []
   }
  ],
  "metadata": {
