Updated the chi squared testes as well

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -742,14 +742,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fail to reject H0 (no difference)\n"
+      "Accept Null Hypothesis\n"
      ]
     }
    ],
@@ -775,9 +775,110 @@
     "\n",
     "# decision\n",
     "if t_data > t_critical_right or t_data < t_critical_left:\n",
-    "    print(\"Reject H0 (difference exists)\")\n",
+    "    print(\"Reject Null Hypothesis\")\n",
     "else:\n",
-    "    print(\"Fail to reject H0 (no difference)\")"
+    "    print(\"Accept Null Hypothesis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accept Null Hypothesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame()\n",
+    "df[\"die_faces\"] = [1, 2, 3, 4, 5, 6]\n",
+    "df[\"Observed\"] = [15, 20, 22, 18, 25, 20]\n",
+    "\n",
+    "total_rolls = 120\n",
+    "num_faces = 6\n",
+    "expected_freq = total_rolls / num_faces\n",
+    "\n",
+    "# Step 3: Calculate the Chi-square statistic manually\n",
+    "df['Expected'] = expected_freq\n",
+    "df['(O-E)^2/E'] = ((df['Observed'] - df['Expected'])**2) / df['Expected']\n",
+    "\n",
+    "# Step 4: Sum up the Chi-square components\n",
+    "chi_square_stat = df['(O-E)^2/E'].sum()\n",
+    "\n",
+    "# Step 5: Degrees of freedom (k - 1, where k is the number of categories)\n",
+    "df = num_faces - 1\n",
+    "\n",
+    "#chi_critical_left  = stats.chi2.ppf(alpha/2, df_degrees_of_freedom)\n",
+    "#chi_critical_right = stats.chi2.ppf(1 - alpha/2, df_degrees_of_freedom)\n",
+    "alpha = 0.05\n",
+    "critical_value = stats.chi2.ppf(1-alpha, df)\n",
+    "\n",
+    "if chi_square_stat > critical_value:\n",
+    "    print(\"Reject Null Hypothesis\")\n",
+    "else:\n",
+    "    print(\"Accept Null Hypothesis\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accept Null Hypothesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Step 1: Create the contingency table\n",
+    "data = {\n",
+    "    'Topping': ['Pepperoni', 'Margherita', 'BBQ Chicken', 'Olives'],\n",
+    "    'Gen-z': [25, 15, 10, 5],\n",
+    "    'Gen-alpha': [20, 25, 15, 5]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data).set_index('Topping')\n",
+    "\n",
+    "# Step 2: Row totals, column totals, and grand total\n",
+    "df['Row_Total'] = df.sum(axis=1)\n",
+    "col_totals = df[['Gen-z', 'Gen-alpha']].sum()\n",
+    "grand_total = col_totals.sum()\n",
+    "\n",
+    "# Step 3: Expected frequencies = (row total * column total) / grand total\n",
+    "expected = pd.DataFrame(index=df.index, columns=['Gen-z', 'Gen-alpha'])\n",
+    "\n",
+    "for row in df.index:\n",
+    "    for col in ['Gen-z', 'Gen-alpha']:\n",
+    "        expected.loc[row, col] = (df.loc[row, 'Row_Total'] * col_totals[col]) / grand_total\n",
+    "\n",
+    "\n",
+    "# Step 4: Compute Chi-square statistic manually\n",
+    "chi_table = ((df[['Gen-z', 'Gen-alpha']] - expected) ** 2) / expected\n",
+    "chi_square_stat = chi_table.sum().sum()\n",
+    "\n",
+    "# Step 5: Degrees of freedom = (rows - 1) * (columns - 1)\n",
+    "df_degrees_of_freedom = (df.shape[0] - 1) * (2 - 1)\n",
+    "\n",
+    "# Step 6: Critical value for \n",
+    "alpha = 0.05\n",
+    "critical_value = stats.chi2.ppf(1-alpha, df_degrees_of_freedom)\n",
+    "\n",
+    "\n",
+    "\n",
+    "if chi_square_stat > critical_value:\n",
+    "    print(\"Reject Null Hypothesis\")\n",
+    "else:\n",
+    "    print(\"Accept Null Hypothesis\")\n"
    ]
   },
   {
